--- a/index.html
+++ b/index.html
@@ -28,6 +28,21 @@
             <img src="images/jahangir.png" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/jahangir.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a web Developer</h2>
+            <p>
+                Hi, I am JAHANGIR HOSSAIN a trainee of batch 5 of complete web development course of Programming
+                Hero run by Mr.Jhanker Mahboob Sir. This is a test portfolio of mine. Thanks for giving a look on this.
+            </p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/jahangir-isd-bd/"">DOWNLOAD
+                RESUME" </a>
+        </div>
+    </section>
 </body>
 
 </html>
