--- a/index.html
+++ b/index.html
@@ -14,33 +14,76 @@
 
 <body>
 
-    <section class="top-banner">
+    <section class="mission-22">
         <div class="half-width">
-            <h1>Welcome To</h1>
-            <h1><span class="orange-color">Jahangir Hossain</span> World! </h1>
-            <h3>Web developer Designer</h3>
-            <p>Hi, I am JAHANGIR HOSSAIN a trainee of batch 5 of complete web development course of Programming
-                Hero run by Mr.Jhanker Mahboob Sir. This is a test portfolio of mine. Thanks for giving a look on this.
+            <h1>Stay Focused On</h1>
+            <h1 style="color:orange;">Mission 2022</h1>
+            <p> I am JAHANGIR HOSSAIN a trainee of batch 5 of complete web development
+                course of Programming Hero run by Mr.Jhanker Mahboob Sir. This is my first assignment. I want to be a
+                professional web developer. I think only hard work is the way to success. Thanks for giving a look on
+                this.
             </p>
-            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/jahangir-isd-bd/">HIRE ME</a>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/jahangir-isd-bd/">Explore Now</a>
+
+            <h4>Scroll down to explore more about us</h4><br>
         </div>
         <div class="half-width">
             <img src="images/jahangir.png" alt="">
         </div>
     </section>
+    <h1 align="center">My Mission in <span class="orange-color">2022</span></h1>
     <section class="dream-big">
         <div class="half-width">
-            <img src="images/jahangir.png" alt="">
+            <img src="images/coding.png" alt="">
         </div>
         <div class="half-width">
-            <h1>Dream Big</h1>
-            <h2>Become a web Developer</h2>
+            <h1>Develop</h1>
+            <h1>Without Limits</h1>
             <p>
-                Hi, I am JAHANGIR HOSSAIN a trainee of batch 5 of complete web development course of Programming
-                Hero run by Mr.Jhanker Mahboob Sir. This is a test portfolio of mine. Thanks for giving a look on this.
+                I am JAHANGIR HOSSAIN a trainee of batch 5 of complete web development
+                course of Programming Hero run by Mr.Jhanker Mahboob Sir. This is my first assignment. I want to be a
+                professional web developer. I think only hard work is the way to success. Thanks for giving a look on
+                this.
             </p>
-            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/jahangir-isd-bd/"">DOWNLOAD
-                RESUME" </a>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/jahangir-isd-bd/">Read The
+                Documentation
+            </a>
+        </div>
+    </section>
+    <section class="mission-22">
+        <div class="half-width">
+            <h1>Know our</h1>
+            <h1>Global Community</h1>
+            <p> I am JAHANGIR HOSSAIN a trainee of batch 5 of complete web development
+                course of Programming Hero run by Mr.Jhanker Mahboob Sir. This is my first assignment. I want to be a
+                professional web developer. I think only hard work is the way to success. Thanks for giving a look on
+                this.
+            </p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/jahangir-isd-bd/">Read The
+                Documentation</a>
+
+        </div>
+        <div class="half-width">
+            <img src="images/project.png" alt="">
+        </div>
+    </section>
+
+    <h1 align="center">Build<span class="orange-color"> Corona Application</span></h1>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/shape-6.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Stay Safe With</h1>
+            <h1>Go<span class="orange-color"> Corona</span></h1>
+            <p>
+                I am JAHANGIR HOSSAIN a trainee of batch 5 of complete web development
+                course of Programming Hero run by Mr.Jhanker Mahboob Sir. This is my first assignment. I want to be a
+                professional web developer. I think only hard work is the way to success. Thanks for giving a look on
+                this.
+            </p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/jahangir-isd-bd/">App Features
+            </a>
         </div>
     </section>
 </body>
