--- a/index.html
+++ b/index.html
@@ -32,7 +32,30 @@
         </div>
     </section>
     <h1 align="center">My Mission in <span class="orange-color">2022</span></h1>
-    <section class="dream-big">
+    <section class="mission-22">
+        <div class="half-width">
+
+            <img src="images/illustrator-1.png" alt="">
+            <h1>Mission</h1>
+            <p>This is my first mission. I must do it.This is my first mission. I must do itThis is my first mission. I
+                must do itThis is my first mission. I must do it</p>
+        </div>
+        <div class="half-width">
+            <img src="images/illustrator-2.png" alt="">
+            <h1>Vission</h1>
+            <p>This is my first mission. I must do it.This is my first mission. I must do itThis is my first mission.
+                Imust do itThis is my first mission. I must do it</p>
+        </div>
+        <div class="half-width">
+            <img src="images/illustrator-3.png" alt="">
+            <h1>Goal</h1>
+            <p>This is my first mission. I must do it.This is my first mission. I must do itThis is my first mission.
+                Imust do itThis is my first mission. I must do it</p>
+        </div>
+
+    </section>
+
+    <section class="mission-22">
         <div class="half-width">
             <img src="images/coding.png" alt="">
         </div>
@@ -69,7 +92,7 @@
     </section>
 
     <h1 align="center">Build<span class="orange-color"> Corona Application</span></h1>
-    <section class="dream-big">
+    <section class="mission-22">
         <div class="half-width">
             <img src="images/shape-6.png" alt="">
         </div>
@@ -84,6 +107,14 @@
             </p>
             <a class="link-button" target="_blank" href="https://www.linkedin.com/in/jahangir-isd-bd/">App Features
             </a>
+        </div>
+    </section>
+    <section section class="mission-22">
+        <div class="footer">
+            <h2 style="color:white; text-align: center;">Mission<span class="orange-color"> 2022</span> </h2>
+            <h4 style="color:white; text-align:center;font-family: 'Courier New', Courier, monospace;font-size: small;">
+                Hardwork
+                Perseverence and Determination for 2022</h4>
         </div>
     </section>
 </body>
